# vinted_crawler

./: .gitignore  README.md  pyproject.toml
vinted_crawler/: 1908_get_started.ipynb  __main__.py
vinted_crawler/constants/: website_constants.py
vinted_crawler/crawler/: sys_testing.ipynb  vinted_crawler.py  vinted_spider.py
