[tool.poetry]
name = "vinted_crawler_package"
version = "1.0"
description = "Web Crawler to get newest items posted on the second hand fashion e-commerce webiste Vinted.de"
authors = ["Martha Braun"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.2"
numpy = "^1.21.2"
selenium = "^3.141.0"
tqdm = "^4.62.1"
gspread = "^4.0.1"
df2gspread = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
